--- a/MOTC_Transport/App.css
+++ b/MOTC_Transport/App.css
@@ -1,31 +1,54 @@
-body{
-    padding: 0;
-    margin: 0;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-.headerbtn{
-    margin: 0;
-    padding: 0;
-    outline: none;
-    border: none;
-    height: 100%;
-    width: 50%;
-    float: left;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    color: #DCDCDD;
-    text-align: center;
-    line-height: 8vh;
+.headerbtn {
+  margin: 0 0 3% 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  height: 100%;
+  width: 50%;
+  float: left;
+  font-family: Microsoft JhengHei;
+  font-weight: bold;
+  color: #dcdcdd;
+  text-align: center;
+  line-height: 8vh;
 }
 
-.headerbtn:hover{
-    opacity: 60%;
+.headerbtn:hover {
+  opacity: 60%;
 }
 
-.active{
-    background-color: #7e8286;
+.active {
+  background-color: #1985a1;
 }
 
-.nonactive{
-    background-color: #46494C;
+.nonactive {
+  background-color: #7e8286;
+}
+
+table {
+  margin: 0% 5% 0 5%;
+}
+
+.table_name {
+  width: 15%;
+}
+
+.table_des {
+  width: 85%;
+}
+
+table,
+th,
+td {
+  border: 1px solid #1985a1;
+}
+
+td {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
