--- a/MOTC_Transport/App.css
+++ b/MOTC_Transport/App.css
@@ -30,25 +30,26 @@ body {
   background-color: #7e8286;
 }
 
-table {
-  margin: 0% 5% 0 5%;
-}
-
 .table_name {
-  width: 15%;
+  width: 20%;
 }
 
 .table_des {
-  width: 85%;
+  width: 80%;
 }
 
-table,
-th,
-td {
-  border: 1px solid #1985a1;
+.table {
+  border-color: #1985a1 !important;
+  width: 90% !important;
+  margin: auto !important;
 }
 
 td {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+}
+
+form {
+  margin: 0 0 3% 65%;
+  width: 30%;
 }
